# snake-game

./: .gitmodules  CMakeLists.txt  README.md
snakegame-cpp/: food.h  g++.txt  main.cpp  rect.h  snake.h  window.h
snakegame-cpp/limpanLibs/: LICENSE  README.md
snakegame-cpp/limpanLibs/lib/: random.h
snakegame-cpp/limpanLibs/programs/: simpleRandNumber.cpp
